--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <br />
 
     <footer id="footer">
-      <a href="mailto:fake@gmail.com">Contatos via email</a>
-      <a href="tel:+557732445587">Contatos via telefone</a>
+      <a href="mailto:fake@gmail.com">Contate-nos via email</a>
+      <a href="tel:+557732445587">Contate-nos via telefone</a>
 
       <a target="_blank" href="https://www.britannica.com/biography/Steve-Jobs"
         >Referência1</a
