aprendendo css seletores descendentes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         media proprietor, and investor.
       </p>
       <br />
-      <ol>
+      <ol id="lista-ol">
         <li>
           Born: February 24, 1955, San Francisco, California, United States
         </li>
